Bug 430199 - Transfrom Mask makes the parent layer invisible
Summary: Transfrom Mask makes the parent layer invisible
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 4.4.2-beta1
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-09 23:55 UTC by acc4commissions
Modified: 2021-07-19 11:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2020-12-09 23:55:12 UTC
SUMMARY
It also happens in 4.4.1.

STEPS TO REPRODUCE
1. Make a layer(including vector layer) with contents and add a Transform Mask
2. Transform it via Transform Mask
3. Turn the Mask off and turn it back on by clicking the eye icon in the layers docker
3-1. Use move tool on the parent layer

OBSERVED RESULT
The parent layer becomes invisible.

EXPECTED RESULT
It should stay visible.

SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2020-12-10 13:13:38 UTC
Hi, acc4commissions!

Thank you for the report. I can reproduce this issue. I can even partially reproduce it in my in-stack transform preview branch. The cropping happens when transform mask does incremental update, and no cropping happens when the final full-quality update comes after 3 seconds delay.
Comment 2 Dmitry Kazakov 2020-12-11 09:29:51 UTC
Git commit 36e2a2a9deba50c99fcf70a2da2e4232774ac795 by Dmitry Kazakov.
Committed on 11/12/2020 at 09:27.
Pushed by dkazakov into branch 'krita/4.3'.

Fix cropping of the source area in transfrom masks after moving the source layer

That was a regression from 23a6ab6d871a2c1760f03d1fcf4b8a2b9e7098ee.

M  +1    -1    libs/image/kis_perspectivetransform_worker.cpp

https://invent.kde.org/graphics/krita/commit/36e2a2a9deba50c99fcf70a2da2e4232774ac795
Comment 3 Dmitry Kazakov 2020-12-11 09:29:59 UTC
Git commit c9c027702c2297866158bf280d625bb29f3e76e8 by Dmitry Kazakov.
Committed on 11/12/2020 at 09:27.
Pushed by dkazakov into branch 'krita/4.3'.

Fix offset of transform mask's rotation center when using Move Tool

m_rotationCenterOffset is a relative value, it shouldn't be offset
on the mask move.

M  +0    -1    plugins/tools/tool_transform2/tool_transform_args.cc

https://invent.kde.org/graphics/krita/commit/c9c027702c2297866158bf280d625bb29f3e76e8
Comment 4 Dmitry Kazakov 2020-12-11 09:31:08 UTC
Git commit 9d06b781004a257616d8869e9766d804a60e6e57 by Dmitry Kazakov.
Committed on 11/12/2020 at 09:30.
Pushed by dkazakov into branch 'master'.

Fix offset of transform mask's rotation center when using Move Tool

m_rotationCenterOffset is a relative value, it shouldn't be offset
on the mask move.

M  +0    -1    plugins/tools/tool_transform2/tool_transform_args.cc

https://invent.kde.org/graphics/krita/commit/9d06b781004a257616d8869e9766d804a60e6e57
Comment 5 Dmitry Kazakov 2020-12-11 09:31:16 UTC
Git commit afa95c4dc92d3b4fb8aaa5d0c46849c539a630c7 by Dmitry Kazakov.
Committed on 11/12/2020 at 09:30.
Pushed by dkazakov into branch 'master'.

Fix cropping of the source area in transfrom masks after moving the source layer

That was a regression from 23a6ab6d871a2c1760f03d1fcf4b8a2b9e7098ee.

M  +1    -1    libs/image/kis_perspectivetransform_worker.cpp

https://invent.kde.org/graphics/krita/commit/afa95c4dc92d3b4fb8aaa5d0c46849c539a630c7
Comment 6 acc4commissions 2020-12-11 23:06:18 UTC
Unfortunately it still happens in git 2db646c. Is it that the patch is not applied yet?
Comment 7 Dmitry Kazakov 2020-12-12 10:31:11 UTC
Hi, acc4commisions!

The patch is present in the sha1 you mentioned. I'll check the problem again...

Can you make a video of the problem? Perhaps I didn't manage to reproduce the exact problem you mentioned?
Comment 8 acc4commissions 2020-12-12 23:27:43 UTC
(In reply to Dmitry Kazakov from comment #7)
> Hi, acc4commisions!
> 
> The patch is present in the sha1 you mentioned. I'll check the problem
> again...
> 
> Can you make a video of the problem? Perhaps I didn't manage to reproduce
> the exact problem you mentioned?

Hi Dmitry, 
Instead of video I'll add some more explanations.
- It seems only happen when using Warp, Cage, Liquify, Mesh transform modes. (The bug is not shown with Free and Perspective transform mode)
- In such cases, if you wait long enough, the dissapeared parent layer eventually shows up on canvas. (15~30 secs)
Comment 9 Dmitry Kazakov 2021-07-19 11:45:54 UTC
Git commit 6f16cbccd83095e82c8348be428610be3a5412e1 by Dmitry Kazakov.
Committed on 19/07/2021 at 11:45.
Pushed by dkazakov into branch 'master'.

Fix updates when transforming a transform mask with non-affine transform

M  +10   -1    plugins/tools/tool_transform2/strokes/inplace_transform_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/6f16cbccd83095e82c8348be428610be3a5412e1