Fix cropping of the source area in transfrom masks after moving the source layer

That was a regression from 23a6ab6d871a2c1760f03d1fcf4b8a2b9e7098ee.

BUG:430199